@@ -176,6 +176,7 @@ static inline int calibration_line_length(SnapScan_Scanner *pss)
     {
     case PRISA5000E:
     case PRISA5000:
+    case PRISA5150:
         pos_factor = 600;
         break;
     case PERFECTION1270:
@@ -1317,6 +1318,11 @@ static SANE_Status send_gamma_table (SnapScan_Scanner *pss, u_char dtc, u_char d
             status = send (pss, dtc, dtcq);
             CHECK_STATUS (status, me, "2nd send");
             break;
+        case PRISA5150:
+            /* 5150 needs the gamma table twice, with dtc = 0x04 for the second one */
+            status = send (pss, dtc+1, dtcq);
+            CHECK_STATUS (status, me, "2nd send");
+            break;
         default:
             break;
     }
@@ -1920,6 +1926,9 @@ SANE_Status sane_get_select_fd (SANE_Handle h, SANE_Int * fd)
 
 /*
  * $Log$
+ * Revision 1.63  2005/12/04 15:03:00  oliver-guest
+ * Some fixes for Benq 5150
+ *
  * Revision 1.62  2005/12/02 19:15:42  oliver-guest
  * Change SnapScan version number to 1.4.50
  *
