@@ -1,3 +1,8 @@
+2005-12-04  Oliver Schwartz <Oliver.Schwartz@gmx.de>
+
+	* backend/snapscan.c backend/snapscan.c backend/snapscan-scsi.c
+	  backend/snapscan-options.c: Some fixes for Benq 5150
+
 2005-12-03  Peter Fales <peter@fales-lorenz.net>
 	* backend/gphoto2.c: Cosmetic changes to debug messages
 
